[project]
name = "zig-pypi"
version = "0"

requires-python = "~=3.8"
dependencies = [
  "wheel~=0.41.0",
]

# To verify wheels locally instead of through
# the .github/workflows/cd.yml workflow
[tool.pdm.dev-dependencies]
upload = ["twine"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
